Fixing alignment of text in tables.

--- a/app/webroot/css/cake.generic.css
+++ b/app/webroot/css/cake.generic.css
@@ -156,7 +156,7 @@ th a.desc:after {
 table tr td {
 	background: #fff;
 	padding: 6px;
-	text-align: center;
+	text-align: left;
 	vertical-align: top;
 	border-bottom:1px solid #ddd;
 }
